# physicsutils

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: check_collimation_range.py
src/physicsutils/apps/: keyrate_symmetric.py
src/physicsutils/devices/: k10cr1.py  spectrometer.py
src/physicsutils/models/: crystal.py  gaussian_beam.py
tests/: migration_tests.py  test_gaussianbeam.py
