[tool.poetry]
name = "physicsutils"
version = "0.1.0"
description = ""
authors = ["pyuxiang <pehyuxiang@gmail.com>"]
license = "GPLv2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
boiler = { git = "https://github.com/pyuxiang/boiler.git", branch = "main" }
numpy = "^1.24.2"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
